--- a/register.html
+++ b/register.html
@@ -59,8 +59,7 @@
                 </div>
                 <div class="form-group">
                     <label for="registerAvatar">Avatar (facultatif):</label>
-                    <input id="registerAvatar" type="file" style="font-size: 0.8rem;" name="avatar"
-                        accept="image/*">
+                    <input id="registerAvatar" type="file" style="font-size: 0.8rem;" name="avatar" accept="image/*">
                 </div>
 
                 <button type="submit" class="btn-login">S'inscrire</button>
@@ -167,9 +166,8 @@
             </div>
         </div>
     </div>
-
-    <script src="js/auth.js"></script>
-    <script src="js/auth_shared.js"></script>
 </body>
+<script src="js/auth.js"></script>
+<script src="js/auth_shared.js"></script>
 
 </html>
